Fix timeline bar to work on firefox too...

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -263,10 +263,11 @@ div.main {
         content:"";
         position:absolute;
         z-index: 0;
-        top:50%;
-        left:0;
-        right:0;
-        bottom:0;
+        width: @timeline-icon-size;
+        display: block;
+        height: @timeline-icon-size * 3;
+        content: "";
+        position: absolute;
       }
 
 
